# safe-int

./: .gitignore  LICENSE  README.md  cabal.project  flake.nix  safe-int.cabal
src/Data/Int/: Safe.hs  Unsafe.hs
test/: Main.hs
test/Test/: Gen.hs
test/Test/Data/Int/: Safe.hs  Unsafe.hs
