cabal-version:      3.0
name:               safe-int
version:            1.0.0.0
synopsis:           Type-level checking of integer overflow
-- description:
homepage:           https://github.com/sgillespie/safe-int
license:            MIT
license-file:       LICENSE
author:             Sean D Gillespie
maintainer:         sean@mistersg.net
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.1.0
    hs-source-dirs:   src
    default-language: GHC2021

executable safe-int
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.1.0,
        safe-int

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite safe-int-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        safe-int
